// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-arrow-left t-size-m"
      />
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-arrow-right t-size-m"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`jump.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-arrow-left t-size-m"
      />
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <i
          class="t-icon t-icon-more t-size-m"
        />
      </li>
      <li
        class="t-pagination__number"
      >
        33
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-arrow-right t-size-m"
      />
    </div>
    <div
      class="t-pagination__jump"
    >
      跳转
      <div
        class="t-input"
      >
        <input
          class="t-input__inner"
        />
      </div>
      页
    </div>
  </div>
</DocumentFragment>
`;

exports[`mini.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination t-size-s"
  >
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-arrow-left t-size-m"
      />
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <i
          class="t-icon t-icon-more t-size-m"
        />
      </li>
      <li
        class="t-pagination__number"
      >
        20
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-arrow-right t-size-m"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`more.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-arrow-left t-size-m"
      />
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <i
          class="t-icon t-icon-more t-size-m"
        />
      </li>
      <li
        class="t-pagination__number"
      >
        20
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-arrow-right t-size-m"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`pageNum.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <select
      style="margin-right: 20px; height: 32px;"
    >
      <option
        value="20"
      >
        20
      </option>
      <option
        value="30"
      >
        30
      </option>
      <option
        value="100"
      >
        100
      </option>
      <option
        value="200"
      >
        200
      </option>
    </select>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-arrow-left t-size-m"
      />
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <i
          class="t-icon t-icon-more t-size-m"
        />
      </li>
      <li
        class="t-pagination__number"
      >
        33
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-arrow-right t-size-m"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`simple.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-arrow-left t-size-m"
      />
    </div>
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        value="1"
      />
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-arrow-right t-size-m"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`simpleMini.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination t-size-s"
  >
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-arrow-left t-size-m"
      />
    </div>
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        value="1"
      />
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-arrow-right t-size-m"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`total.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__total"
    >
      共 685 项数据
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-arrow-left t-size-m"
      />
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <i
          class="t-icon t-icon-more t-size-m"
        />
      </li>
      <li
        class="t-pagination__number"
      >
        46
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-arrow-right t-size-m"
      />
    </div>
  </div>
</DocumentFragment>
`;
